--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins{
 
     id 'com.gradle.build-scan' version '1.13'
 }
-repositories { maven { url "https://rundeck.bintray.com/rundeck-maven" } }
+
 apply plugin: 'idea'
 mainClassName = 'test.rd.Test'
 scmVersion {
@@ -29,7 +29,7 @@ allprojects {
 dependencies {
     // Use the latest Groovy version for building this library
     // compile "com.squareup.okhttp3:okhttp:3.6.0"
-    compile "org.rundeck.api:rd-api-client:1.1.7"
+    compile "org.rundeck.api:rd-api-client:1.2.2"
 
     // Use the awesome Spock testing and specification framework
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
@@ -41,6 +41,7 @@ repositories {
     // You can declare any Maven/Ivy/file repository here.
     mavenLocal()
     jcenter()
+    maven { url "https://rundeck.bintray.com/maven" }
 }
 
 
