--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,9 @@ plugins{
     id 'pl.allegro.tech.build.axion-release' version '1.9.3'
 
     id 'groovy'
-    id 'maven'
+    id 'maven-publish'
     id 'application'
 
-    id 'com.gradle.build-scan' version '1.13'
 }
 
 apply plugin: 'idea'
@@ -29,10 +28,10 @@ allprojects {
 dependencies {
     // Use the latest Groovy version for building this library
     // compile "com.squareup.okhttp3:okhttp:3.6.0"
-    compile "org.rundeck.api:rd-api-client:1.2.2"
+    implementation "org.rundeck.api:rd-api-client:1.2.2"
 
     // Use the awesome Spock testing and specification framework
-    testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
+    testImplementation 'org.spockframework:spock-core:1.0-groovy-2.4'
 }
 
 // In this section you declare where to find the dependencies of your project
@@ -42,15 +41,4 @@ repositories {
     mavenLocal()
     jcenter()
     maven { url "https://rundeck.bintray.com/maven" }
-}
-
-
-buildScan {
-    termsOfServiceUrl = 'https://gradle.com/terms-of-service'
-    termsOfServiceAgree = 'yes'
-}
-
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.10'
 }
