--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ allprojects {
 
 dependencies {
     // Use the latest Groovy version for building this library
-    implementation "org.rundeck.api:rd-api-client:1.2.4"
+    implementation "org.rundeck.api:rd-api-client:1.3.9"
 
     // Use the awesome Spock testing and specification framework
     testImplementation 'org.spockframework:spock-core:1.0-groovy-2.4'
@@ -42,9 +42,6 @@ dependencies {
 
 // In this section you declare where to find the dependencies of your project
 repositories {
-    // Use jcenter for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
     mavenLocal()
-    jcenter()
-    maven { url "https://rundeck.bintray.com/maven" }
+    mavenCentral()
 }
